# mahjong-hand-distance

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/mahjong_hand_distance/: __init__.py  hand.py  tile.py
src/mahjong_hand_distance/images/: __init__.py
